added pagination for news